fix topic tools (desktop)

--- a/common/common.scss
+++ b/common/common.scss
@@ -6257,11 +6257,11 @@ nav.post-controls .show-replies i {
   background-color: $secondary;
   top: auto;
   right: auto;
+  left: -60px;
+  width: initial;
 }
 #topic-progress-wrapper .topic-admin-menu-button-container .toggle-admin-menu.widget-button {
   border-right: 0;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
   height: auto;
 }
 #topic-progress-wrapper .topic-admin-menu-button-container .toggle-admin-menu.widget-button .fa {
