Move fix in PR 58de974 from dist to src file

--- a/scss/mobile/_reply.scss
+++ b/scss/mobile/_reply.scss
@@ -61,6 +61,11 @@
   .reply-to .composer-controls {
     align-items: center;
     display: flex;
+
+    button {
+      margin-left: $card-inner-spacer-x;
+      padding: 0;
+    }
   }
 
   .title-and-category {
