Fix a syntax error in `modal.scss`

--- a/scss/common/_modal.scss
+++ b/scss/common/_modal.scss
@@ -67,7 +67,7 @@
     .date .date-input,
     .time .time-input {
       margin-right: 0;
-      padding: padding: $text-field-padding-y $text-field-padding-x ($text-field-padding-y - $text-field-border-width);
+      padding: $text-field-padding-y $text-field-padding-x ($text-field-padding-y - $text-field-border-width);
     }
 
     .range {
