--- a/common/common.scss
+++ b/common/common.scss
@@ -20,7 +20,7 @@
 
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono|Roboto+Slab");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
-blockquote::after, blockquote::before, .d-editor-preview div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .expanded-quote div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .d-editor-preview div.poll li[data-poll-option-id]::before, .expanded-quote div.poll li[data-poll-option-id]::before, .select-kit.multi-select .choices .selected-name .name::after, .d-header .btn.sign-up-button::before, .fa-anchor::before, .fa-angle-double-down::before, .fa-arrow-down::before, .fa-archive::before, .fa-arrows-h::before, .fa-arrow-up::before, .fa-asterisk::before, .fa-at::before, .fa-backward::before, .fa-ban::before, .fa-bar-chart-o::before, .fa-bars::before, .fa-bed::before, .fa-bold::before, .fa-bookmark::before, .fa-briefcase::before, .fa-calendar::before, .fa-calendar-plus-o::before, .fa-caret-down::before, .fa-caret-right::before, .fa-caret-up::before, .fa-certificate::before, .fa-check::before, .fa-check-square::before, .fa-check-square-o::before, .fa-chevron-down::before, .fa-chevron-up::before, .fa-circle::before, .fa-circle-o::before, .fa-clipboard::before, .fa-close::before, .fa-clock-o::before, .fa-code::before, .fa-columns::before, .fa-copy::before, .fa-copyright::before, .fa-cog::before, .fa-comment::before, .fa-comment-o::before, .fa-compress::before, .fa-desktop::before, .fa-dot-circle-o::before, .fa-download::before, .fa-ellipsis-h::before, .fa-envelope::before, .fa-envelope-o::before, .fa-exclamation-circle::before, .fa-exclamation-triangle::before, .fa-expand::before, .fa-eye::before, .fa-eye-slash::before, .fa-fast-backward::before, .fa-fast-forward::before, .fa-file::before, .fa-file-text-o::before, .fa-flag::before, .fa-folder::before, .fa-forward::before, .fa-gavel::before, .fa-gear::before, .fa-globe::before, .fa-group::before, .fa-hand-o-right::before, .fa-header::before, .fa-heart::before, .fa-heart-o::before, .fa-italic::before, .fa-link::before, .fa-list::before, .fa-list-alt::before, .fa-list-ol::before, .fa-list-ul::before, .fa-lock::before, .fa-magic::before, .fa-mail-forward::before, .fa-meh-o::before, .fa-microphone::before, .fa-microphone-slash::before, .fa-minus::before, .fa-mobile::before, .fa-moon-o::before, .fa-paint-brush::before, .fa-pencil::before, .fa-pencil-square-o::before, .fa-picture-o::before, .fa-play::before, .fa-plus::before, .fa-power-off::before, .fa-question-circle::before, .fa-quote-right::before, .fa-refresh::before, .fa-reply::before, .fa-rocket::before, .fa-search::before, .fa-shield::before, .fa-sign-out::before, .fa-smile-o::before, .fa-square-o::before, .fa-sun-o::before, .fa-tag::before, .fa-tasks::before, .fa-television::before, .fa-thumb-tack::before, .fa-times::before, .fa-times-circle::before, .fa-trash::before, .fa-trash-o::before, .fa-undo::before, .fa-unlock::before, .fa-unlock-alt::before, .fa-upload::before, .fa-user::before, .fa-user-plus::before, .fa-users::before, .fa-wrench::before, .mfp-arrow.mfp-arrow-left::before, .mfp-arrow.mfp-arrow-right::before, .mfp-close::before, .mfp-image-holder .mfp-title::before, .mfp-title a.image-source-link::before, .pika-next::before, .pika-prev::before, #reply-control.draft .toggler::before, #reply-control .grippie::before, #reply-control .toggle-preview::before, #reply-control .toggle-toolbar::before, #reply-control .toggler::before, nav.post-controls button .read-icon::before, .meta .expand::before, .meta .filename::before {
+blockquote::after, blockquote::before, .d-editor-preview div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .expanded-quote div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .d-editor-preview div.poll li[data-poll-option-id]::before, .expanded-quote div.poll li[data-poll-option-id]::before, .select-kit.multi-select .choices .selected-name .name::after, .d-header .btn.sign-up-button::before, .fa-anchor::before, .fa-angle-double-down::before, .fa-arrow-down::before, .fa-archive::before, .fa-arrows-h::before, .fa-arrow-up::before, .fa-asterisk::before, .fa-at::before, .fa-backward::before, .fa-ban::before, .fa-bar-chart-o::before, .fa-bars::before, .fa-bed::before, .fa-bold::before, .fa-bookmark::before, .fa-briefcase::before, .fa-calendar::before, .fa-calendar-plus-o::before, .fa-caret-down::before, .fa-caret-right::before, .fa-caret-up::before, .fa-certificate::before, .fa-check::before, .fa-check-square::before, .fa-check-square-o::before, .fa-chevron-down::before, .fa-chevron-up::before, .fa-circle::before, .fa-circle-o::before, .fa-clipboard::before, .fa-close::before, .fa-clock-o::before, .fa-code::before, .fa-columns::before, .fa-copy::before, .fa-copyright::before, .fa-cog::before, .fa-comment::before, .fa-comment-o::before, .fa-compress::before, .fa-desktop::before, .fa-dot-circle-o::before, .fa-download::before, .fa-ellipsis-h::before, .fa-envelope::before, .fa-envelope-o::before, .fa-exclamation-circle::before, .fa-exclamation-triangle::before, .fa-expand::before, .fa-eye::before, .fa-eye-slash::before, .fa-fast-backward::before, .fa-fast-forward::before, .fa-file::before, .fa-file-text-o::before, .fa-flag::before, .fa-folder::before, .fa-forward::before, .fa-gavel::before, .fa-gear::before, .fa-globe::before, .fa-group::before, .fa-hand-o-right::before, .fa-header::before, .fa-heart::before, .fa-heart-o::before, .fa-italic::before, .fa-link::before, .fa-list::before, .fa-list-alt::before, .fa-list-ol::before, .fa-list-ul::before, .fa-lock::before, .fa-magic::before, .fa-mail-forward::before, .fa-meh-o::before, .fa-microphone::before, .fa-microphone-slash::before, .fa-minus::before, .fa-mobile::before, .fa-moon-o::before, .fa-paint-brush::before, .fa-pencil::before, .fa-pencil-square-o::before, .fa-picture-o::before, .fa-play::before, .fa-plus::before, .fa-power-off::before, .fa-question-circle::before, .fa-quote-right::before, .fa-refresh::before, .fa-reply::before, .fa-rocket::before, .fa-search::before, .fa-shield::before, .fa-sign-out::before, .fa-smile-o::before, .fa-square-o::before, .fa-sun-o::before, .fa-tag::before, .fa-tasks::before, .fa-television::before, .fa-thumb-tack::before, .fa-times::before, .fa-times-circle::before, .fa-trash::before, .fa-trash-o::before, .fa-undo::before, .fa-unlock::before, .fa-unlock-alt::before, .fa-upload::before, .fa-user::before, .fa-user-plus::before, .fa-users::before, .fa-wrench::before, .mfp-arrow.mfp-arrow-left::before, .mfp-arrow.mfp-arrow-right::before, .mfp-close::before, .mfp-image-holder .mfp-title::before, .mfp-title a.image-source-link::before, .pika-next::before, .pika-prev::before, #reply-control .grippie::before, #reply-control .toggle-preview::before, #reply-control .toggle-toolbar::before, nav.post-controls button .read-icon::before, .meta .expand::before, .meta .filename::before {
   font-family: 'Material Icons';
   -webkit-font-feature-settings: 'liga';
           font-feature-settings: 'liga';
@@ -4466,6 +4466,7 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
   padding-right: 0;
 }
 #reply-control.draft .draft-text {
+  color: inherit;
   line-height: 24px;
   margin-right: 8px;
   margin-left: 16px;
@@ -4482,9 +4483,6 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
   float: none;
   width: auto;
 }
-#reply-control.draft .toggler::before {
-  content: 'close';
-}
 #reply-control.edit-title .contents input#reply-title {
   border: 0;
   height: auto;
@@ -4493,6 +4491,27 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
 }
 #reply-control.edit-title .contents input#reply-title:focus, #reply-control.edit-title .contents input#reply-title:hover {
   padding-bottom: 16px;
+}
+#reply-control.fullscreen {
+  max-width: 100%;
+  right: 0;
+}
+.fullscreen-composer #reply-control.fullscreen.show-preview .d-editor-textarea-wrapper {
+  border-right: 0;
+}
+.fullscreen-composer #reply-control.fullscreen .d-editor-preview-wrapper {
+  margin-top: 0;
+}
+#reply-control.fullscreen .grippie {
+  border-radius: 0;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+.fullscreen-composer #reply-control.fullscreen .reply-to {
+  border-bottom: 0;
+  padding-bottom: 0;
 }
 #reply-control.hide-preview .toggle-preview::before {
   content: 'keyboard_arrow_left';
@@ -4532,6 +4551,29 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
       flex-basis: auto;
   -ms-flex-negative: 0;
       flex-shrink: 0;
+}
+#reply-control .composer-controls .btn-flat,
+#reply-control .toggle-toolbar,
+#reply-control .toggler {
+  background-color: transparent !important;
+  color: color-chooser(rgba(0, 0, 0, 0.6), rgba(255, 255, 255, 0.7));
+  font-size: inherit;
+  height: 24px;
+  margin-left: 8px;
+  padding: 0 !important;
+  width: 24px;
+}
+#reply-control .composer-controls .btn-flat:focus, #reply-control .composer-controls .btn-flat:hover,
+#reply-control .toggle-toolbar:focus,
+#reply-control .toggle-toolbar:hover,
+#reply-control .toggler:focus,
+#reply-control .toggler:hover {
+  color: color-chooser(rgba(0, 0, 0, 0.87), white);
+}
+#reply-control .composer-controls .btn-flat:active,
+#reply-control .toggle-toolbar:active,
+#reply-control .toggler:active {
+  color: color-chooser(rgba(0, 0, 0, 0.87), white);
 }
 #reply-control .composer-fields {
   -ms-flex-align: center;
@@ -4662,8 +4704,10 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
 }
 #reply-control .reply-to .btn {
   background-color: transparent !important;
+  border: 0;
   box-shadow: none;
   height: 24px;
+  margin-right: 4px;
   min-height: 0;
 }
 #reply-control .reply-to .btn:focus, #reply-control .reply-to .btn:hover {
@@ -4682,14 +4726,20 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
 #reply-control .reply-to .composer-action-title .user-link {
   margin-right: 0;
 }
+#reply-control .reply-to .composer-action-title .topic-link {
+  margin-right: 0;
+}
+#reply-control .reply-to .composer-action-title .topic-link:focus, #reply-control .reply-to .composer-action-title .topic-link:hover {
+  color: color-chooser(rgba(0, 0, 0, 0.87), white);
+}
+#reply-control .reply-to .composer-action-title .topic-link:focus {
+  outline: 0;
+}
 #reply-control .reply-to .composer-controls {
   margin-right: 0;
   position: absolute;
   top: 8px;
   right: 16px;
-}
-#reply-control .reply-to .composer-controls .toggler {
-  padding: 0;
 }
 #reply-control .reply-to .d-icon {
   border: 0;
@@ -4755,37 +4805,12 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
   left: 0;
   text-indent: 0;
 }
-#reply-control .toggle-toolbar,
-#reply-control .toggler {
-  background-color: transparent !important;
-  color: color-chooser(rgba(0, 0, 0, 0.6), rgba(255, 255, 255, 0.7));
-  font-size: inherit;
-  height: 24px;
-  padding: 0;
-  width: 24px;
-}
-#reply-control .toggle-toolbar:focus, #reply-control .toggle-toolbar:hover,
-#reply-control .toggler:focus,
-#reply-control .toggler:hover {
-  color: color-chooser(rgba(0, 0, 0, 0.87), white);
-}
-#reply-control .toggle-toolbar:active,
-#reply-control .toggler:active {
-  color: color-chooser(rgba(0, 0, 0, 0.87), white);
-}
-#reply-control .toggle-toolbar .fa,
-#reply-control .toggler .fa {
-  display: none;
-}
 #reply-control .toggle-toolbar {
   font-size: inherit !important;
   line-height: inherit !important;
 }
 #reply-control .toggle-toolbar::before {
   content: "menu";
-}
-#reply-control .toggler::before {
-  content: 'close';
 }
 #reply-control .user-selector {
   margin-top: 8px;
@@ -6296,6 +6321,7 @@ nav.post-controls .show-replies i {
   height: 36px;
 }
 #topic-progress .bg {
+  border-top-right-radius: 4px;
   max-width: 100%;
 }
 
@@ -6309,8 +6335,18 @@ nav.post-controls .show-replies i {
   width: auto;
 }
 #topic-progress-wrapper.docked {
-  margin-bottom: 16px;
-  right: 0;
+  border-bottom-right-radius: 4px;
+}
+#topic-progress-wrapper.docked .topic-admin-menu-button-container .toggle-admin-menu.widget-button {
+  border-bottom-left-radius: 4px;
+}
+#topic-progress-wrapper.docked .topic-admin-popup-menu {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+#topic-progress-wrapper.docked #topic-progress,
+#topic-progress-wrapper.docked #topic-progress .bg {
+  border-bottom-right-radius: 4px;
 }
 #topic-progress-wrapper .topic-admin-menu-button-container {
   top: auto;
