--- a/scss/common/_topic-post.scss
+++ b/scss/common/_topic-post.scss
@@ -370,7 +370,6 @@ nav {
   height: $material-icon-size;
   line-height: $material-icon-size;
   top: 0;
-  right: 0;
 }
 
 .signup-cta {
@@ -842,46 +841,17 @@ nav {
 }
 
 .topic-meta-data {
-  @extend %card-block;
+  // @extend %card-block;
 
-  align-items: center;
-  display: flex;
-  min-height: ($card-avatar-size + $card-padding-y);
-  padding-right: ($card-padding-y / 2);
-  padding-bottom: 0;
-  padding-left: ($card-avatar-size + $card-inner-spacer-y + $card-padding-y);
-
-  .names {
-    float: none;
-    margin-right: auto;
-
-    span {
-      display: block;
-      font-size: inherit;
-      max-width: none;
-      padding-right: $card-inner-spacer-x;
-
-      a {
-        color: unquote('$primary');
-
-        @include focus-hover {
-          color: unquote('$primary');
-        }
-      }
-    }
+  .topic-post & {
+    align-items: center;
+    display: flex;
+    min-height: ($card-avatar-size + $card-padding-y);
+    padding: $card-padding-y ($card-padding-x / 2) 0 ($card-avatar-size + $card-inner-spacer-y + $card-padding-y);
   }
 
   .post-info {
-    display: block;
-    float: none;
-    font-size: inherit;
-    margin-top: 0;
-    order: 1;
-
-    &.edits {
-      margin-right: 0;
-      order: 0;
-    }
+    margin-right: 0;
 
     a {
       @extend %btn-base;
@@ -896,6 +866,10 @@ nav {
 
 .topic-notifications-button .reason {
   margin-bottom: 0;
+}
+
+.topic-post {
+  border-left: 0;
 }
 
 #topic-progress {
