--- a/scss/common/_topic-post.scss
+++ b/scss/common/_topic-post.scss
@@ -250,7 +250,6 @@ nav {
 
   .filename {
     margin: 0 $card-inner-spacer-x ($card-inner-spacer-y / 2) $card-padding-x;
-    max-width: none;
 
     &::before {
       @extend %material-icons;
@@ -325,6 +324,8 @@ nav {
 }
 
 .post-links-container {
+  margin-left: 0;
+
   ul li {
     margin: (($btn-height + $card-padding-y - $card-padding-y * 2 - $font-size-base * $line-height-base) / 2) 0;
     overflow: hidden;
