--- a/scss/common/_cooked.scss
+++ b/scss/common/_cooked.scss
@@ -8,6 +8,7 @@
   }
 
   blockquote {
+    border-radius: 0;
     margin-right: ($card-padding-x * -1);
     margin-left: ($card-padding-x * -1);
   }
